--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,53 @@
 /* Global Styling */
 html {
-  
+  font-family: "Helvetica", sans-serif;
+  font-size: 16px;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+/* Header Section */
+.container {
+  width: 1080px;
+}
+
+header {
+  display: block;
+  padding-top: 1rem;
+  width: 100%;
+  height: 20rem;
+  position: fixed;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1.5rem;
+  margin: 0 auto;
+  background-color: rgba(130, 200, 40, 0.2);
+}
+
+nav div {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 2rem;
+}
+
+ul li {
+  display: inline-block;
+  padding-left: .75rem;
+}
+
+nav img {
+  margin-right: .125rem;
+  border-style: none;
+  height: 2.5rem;
+}
+
+/* Top Container Section */
