--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,14 +12,19 @@ a {
 /* Header Section */
 .container {
   width: 1080px;
+  display: flex;
 }
 
 header {
   display: block;
   padding-top: 1rem;
   width: 100%;
-  height: 20rem;
+  margin-bottom: 2rem;
   position: fixed;
+  margin: 0 auto;
+  z-index: 5;
+  background-color: #FFFFFF;
+  border-bottom: 1px solid black;
 }
 
 nav {
@@ -27,7 +32,6 @@ nav {
   justify-content: space-between;
   padding: 1rem 1.5rem;
   margin: 0 auto;
-  background-color: rgba(130, 200, 40, 0.2);
 }
 
 nav div {
@@ -47,7 +51,47 @@ ul li {
 nav img {
   margin-right: .125rem;
   border-style: none;
-  height: 2.5rem;
+  height: 3rem;
 }
 
 /* Top Container Section */
+section {
+  position: relative;
+  top: 7rem;
+}
+
+.top {
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 1.5rem;
+}
+
+.top img {
+  width: 60%;
+  margin-right: 2.5rem;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+}
+
+.info h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+
+.info div {
+  margin-bottom: 2rem;
+}
+
+.info .button {
+  border: 1px solid black;
+  padding: .5rem 1rem;
+  border-radius: 4px;
+}
+
+/* Second Container Section */
